It goes to 24
Arguably the hardest JVM transition I've ever done, as nokee isn't supported anymore.

So replace it all with the new Java 22 FFI API, which has equivalent performance
(I tested) and is a lot easier to use.
Omsim is now downloaded from the GH release, dropping the whole C build.

Upgrade everything that can then be upgraded